--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
       margin: 0 40px;
       transition: .1s;
       font-weight: 500;
-      -moz-user-select: none;
+      user-select: none;
       -webkit-user-select: none;
       -ms-user-select: none;
     }
